Fixed copy being misaligned on first frame

--- a/app/templates/css/728x90.scss
+++ b/app/templates/css/728x90.scss
@@ -10,7 +10,6 @@ $containerWidth: 300px;
         
         #copy-holder {
             width: $containerWidth;
-            right: -20px;
         }
 
         #copy-container {
